# project_for_smi

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  adding_into_article.cpp  adding_into_article.h  adding_into_article.ui  adding_into_author.cpp  adding_into_author.h  adding_into_author.ui  adding_into_edition.cpp  adding_into_edition.h  adding_into_edition.ui  adding_into_journal.cpp  adding_into_journal.h  adding_into_journal.ui  adding_into_work.cpp  adding_into_work.h  adding_into_work.ui  adding_records.cpp  adding_records.h  adding_records.ui  author_search.cpp  author_search.h  author_search.ui  cmake_install.cmake  databasemanger.cpp  databasemanger.h  databasemanger.ui  deleting_into_article.cpp  deleting_into_article.h  deleting_into_article.ui  deleting_into_author.cpp  deleting_into_author.h  deleting_into_author.ui  deleting_into_edition.cpp  (+66 more)
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build-project_for_smi-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h  ui_stream_window.h
build-project_for_smi-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  moc_stream_window.cpp  qrc_resource_qt.cpp
database/: postgresql.sql
project_for_smi/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  project_for_smi.pro  resource_qt.qrc  stream_window.cpp  stream_window.h  stream_window.ui
project_for_smi/fonts/: COPYRIGHT.txt
